// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for enterprise users 1`] = `
{
  "success": true,
  "tier": "enterprise",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for enterprise users 2`] = `
{
  "success": true,
  "tier": "enterprise",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for enterprise users 3`] = `
{
  "success": true,
  "tier": "enterprise",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for enterprise users 4`] = `
{
  "success": true,
  "tier": "enterprise",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for enterprise users 5`] = `
{
  "success": true,
  "tier": "enterprise",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for enterprise users 6`] = `
{
  "success": true,
  "tier": "enterprise",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for enterprise users 7`] = `
{
  "success": true,
  "tier": "enterprise",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for enterprise users 8`] = `
{
  "success": true,
  "tier": "enterprise",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for enterprise users 9`] = `
{
  "success": true,
  "tier": "enterprise",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for enterprise users 10`] = `
{
  "success": true,
  "tier": "enterprise",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for enterprise users 11`] = `
{
  "success": true,
  "tier": "enterprise",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for enterprise users 12`] = `
{
  "success": true,
  "tier": "enterprise",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for enterprise users 13`] = `
{
  "success": true,
  "tier": "enterprise",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for enterprise users 14`] = `
{
  "success": true,
  "tier": "enterprise",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for enterprise users 15`] = `
{
  "success": true,
  "tier": "enterprise",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for enterprise users 16`] = `
{
  "success": true,
  "tier": "enterprise",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for enterprise users 17`] = `
{
  "success": true,
  "tier": "enterprise",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for enterprise users 18`] = `
{
  "success": true,
  "tier": "enterprise",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for enterprise users 19`] = `
{
  "success": true,
  "tier": "enterprise",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for enterprise users 20`] = `
{
  "success": true,
  "tier": "enterprise",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for enterprise users 21`] = `
{
  "success": true,
  "tier": "enterprise",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for enterprise users 22`] = `
{
  "success": true,
  "tier": "enterprise",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for enterprise users 23`] = `
{
  "success": true,
  "tier": "enterprise",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for enterprise users 24`] = `
{
  "success": true,
  "tier": "enterprise",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for enterprise users 25`] = `
{
  "success": true,
  "tier": "enterprise",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for enterprise users 26`] = `
{
  "success": true,
  "tier": "enterprise",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for enterprise users 27`] = `
{
  "success": true,
  "tier": "enterprise",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for enterprise users 28`] = `
{
  "success": true,
  "tier": "enterprise",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for enterprise users 29`] = `
{
  "success": true,
  "tier": "enterprise",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for enterprise users 30`] = `
{
  "success": true,
  "tier": "enterprise",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for enterprise users 31`] = `
{
  "success": true,
  "tier": "enterprise",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for enterprise users 32`] = `
{
  "success": true,
  "tier": "enterprise",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for enterprise users 33`] = `
{
  "success": true,
  "tier": "enterprise",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for enterprise users 34`] = `
{
  "success": true,
  "tier": "enterprise",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for enterprise users 35`] = `
{
  "success": true,
  "tier": "enterprise",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for enterprise users 36`] = `
{
  "success": true,
  "tier": "enterprise",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for enterprise users 37`] = `
{
  "success": true,
  "tier": "enterprise",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for enterprise users 38`] = `
{
  "success": true,
  "tier": "enterprise",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for enterprise users 39`] = `
{
  "success": true,
  "tier": "enterprise",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for enterprise users 40`] = `
{
  "success": true,
  "tier": "enterprise",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for enterprise users 41`] = `
{
  "success": true,
  "tier": "enterprise",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for enterprise users 42`] = `
{
  "success": true,
  "tier": "enterprise",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for enterprise users 43`] = `
{
  "success": true,
  "tier": "enterprise",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for enterprise users 44`] = `
{
  "success": true,
  "tier": "enterprise",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for enterprise users 45`] = `
{
  "success": true,
  "tier": "enterprise",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for enterprise users 46`] = `
{
  "success": true,
  "tier": "enterprise",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for enterprise users 47`] = `
{
  "success": true,
  "tier": "enterprise",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for enterprise users 48`] = `
{
  "success": true,
  "tier": "enterprise",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for enterprise users 49`] = `
{
  "success": true,
  "tier": "enterprise",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for enterprise users 50`] = `
{
  "success": true,
  "tier": "enterprise",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for free users 1`] = `
{
  "success": true,
  "tier": "free",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for free users 2`] = `
{
  "success": true,
  "tier": "free",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for free users 3`] = `
{
  "success": true,
  "tier": "free",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for free users 4`] = `
{
  "success": true,
  "tier": "free",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for free users 5`] = `
{
  "success": true,
  "tier": "free",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for premium users 1`] = `
{
  "success": true,
  "tier": "premium",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for premium users 2`] = `
{
  "success": true,
  "tier": "premium",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for premium users 3`] = `
{
  "success": true,
  "tier": "premium",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for premium users 4`] = `
{
  "success": true,
  "tier": "premium",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for premium users 5`] = `
{
  "success": true,
  "tier": "premium",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for premium users 6`] = `
{
  "success": true,
  "tier": "premium",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for premium users 7`] = `
{
  "success": true,
  "tier": "premium",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for premium users 8`] = `
{
  "success": true,
  "tier": "premium",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for premium users 9`] = `
{
  "success": true,
  "tier": "premium",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for premium users 10`] = `
{
  "success": true,
  "tier": "premium",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for premium users 11`] = `
{
  "success": true,
  "tier": "premium",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for premium users 12`] = `
{
  "success": true,
  "tier": "premium",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for premium users 13`] = `
{
  "success": true,
  "tier": "premium",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for premium users 14`] = `
{
  "success": true,
  "tier": "premium",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for premium users 15`] = `
{
  "success": true,
  "tier": "premium",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for premium users 16`] = `
{
  "success": true,
  "tier": "premium",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for premium users 17`] = `
{
  "success": true,
  "tier": "premium",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for premium users 18`] = `
{
  "success": true,
  "tier": "premium",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for premium users 19`] = `
{
  "success": true,
  "tier": "premium",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for premium users 20`] = `
{
  "success": true,
  "tier": "premium",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for standard users 1`] = `
{
  "success": true,
  "tier": "standard",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for standard users 2`] = `
{
  "success": true,
  "tier": "standard",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for standard users 3`] = `
{
  "success": true,
  "tier": "standard",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for standard users 4`] = `
{
  "success": true,
  "tier": "standard",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for standard users 5`] = `
{
  "success": true,
  "tier": "standard",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for standard users 6`] = `
{
  "success": true,
  "tier": "standard",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for standard users 7`] = `
{
  "success": true,
  "tier": "standard",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for standard users 8`] = `
{
  "success": true,
  "tier": "standard",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for standard users 9`] = `
{
  "success": true,
  "tier": "standard",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should allow requests within burst threshold for standard users 10`] = `
{
  "success": true,
  "tier": "standard",
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should block requests exceeding burst threshold for enterprise users 1`] = `
{
  "error": {
    "code": "BURST_PROTECTION",
    "message": "High activity detected — we're balancing traffic to maintain your service quality.",
  },
  "success": false,
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should block requests exceeding burst threshold for free users 1`] = `
{
  "error": {
    "code": "BURST_PROTECTION",
    "message": "You're making a lot of requests! Let's pace them out together.",
  },
  "success": false,
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should block requests exceeding burst threshold for premium users 1`] = `
{
  "error": {
    "code": "BURST_PROTECTION",
    "message": "You're sending a lot of requests — we're pacing it gently to keep your experience smooth.",
  },
  "success": false,
}
`;

exports[`🛡 Dream-State Dynamic Tier Burst Protection should block requests exceeding burst threshold for standard users 1`] = `
{
  "error": {
    "code": "BURST_PROTECTION",
    "message": "Thanks for your activity! Let's just slow it down a touch for better service.",
  },
  "success": false,
}
`;
